<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/start"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginLeft="171dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="286dp"
        android:text="Button"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Introduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="138dp"
        android:layout_marginRight="138dp"
        android:layout_marginBottom="77dp"
        app:layout_constraintBottom_toTopOf="@+id/Introduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

    <TextView
        android:id="@+id/Introduction"
        android:layout_width="320dp"
        android:layout_height="322dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/introduction"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/left"
        android:layout_width="170dp"
        android:layout_height="700dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="5dp"
        android:gravity="top|bottom|center_vertical|center|start"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/right"
        android:layout_width="170dp"
        android:layout_height="700dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="5dp"
        android:gravity="top|bottom|center_vertical|center|start"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shadow" />

    <ImageView
        android:id="@+id/bottom"
        android:layout_width="600dp"
        android:layout_height="540dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faceu"
        app:srcCompat="@drawable/bottom" />

    <ImageView
        android:id="@+id/faceu"
        android:layout_width="0dp"
        android:layout_height="1250dp"
        android:contentDescription="@string/final_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/faceu" />

    <ImageView
        android:id="@+id/faceacat"
        android:layout_width="0dp"
        android:layout_height="1250dp"
        android:contentDescription="@string/final_cat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/faceacat" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="360dp"
        android:layout_marginRight="360dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/faceu" />

</android.support.constraint.ConstraintLayout>